crates/etl-api/src/data/snapshots/etl_api__data__destinations__tests__destination_config_json_encryption.snap
---
source: crates/etl-api/src/data/destinations.rs
expression: config_in_db
---
{
  "big_query": {
    "dataset_id": "dataset-id",
    "max_concurrent_streams": 1,
    "max_staleness_mins": 99,
    "project_id": "project-id",
    "service_account_key": "[key]"
  }
}
